--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a dummy REST API using typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon"
   },
   "author": "Ariyaman Debnath",
   "license": "ISC",
