--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/pino": "^7.0.5",
     "babel": "^6.23.0",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
