--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.1",
+    "morgan": "^1.10.0",
     "nanoid": "^5.0.7",
     "pino": "^8.20.0",
     "pino-pretty": "^11.0.0",
+    "winston": "^3.13.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
