--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "nanoid": "^5.0.7",
     "pino": "^8.20.0",
     "pino-pretty": "^11.0.0",
+    "prom-client": "^15.1.1",
+    "response-time": "^2.3.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.13.0",
     "zod": "^3.22.4"
   },
@@ -40,6 +44,8 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.12.7",
     "@types/pino": "^7.0.5",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "babel": "^6.23.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
