--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.12.7",
     "@types/pino": "^7.0.5",
+    "@types/response-time": "^2.3.8",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "babel": "^6.23.0",
